Fixed layout problem in Koski-tutkinnot list in hakemus view

--- a/resources/less/hakija.less
+++ b/resources/less/hakija.less
@@ -3188,26 +3188,13 @@ i.arkistoitu {
   }
 }
 
-.application__fixed-koski-tutkinto-container {
-  align-items: center;
-  display: flex;
-  justify-content: space-between;
-  flex-flow: row nowrap;
-  padding: 19px;
-  margin-bottom: 1px;
-  font-size: 14px;
-  font-weight: bold;
-  background-color: @primary-green-700;
-  color: @white;
-}
-
 .application__fixed-koski-tutkinto-item {
   align-items: flex-start;
   cursor: pointer;
   display: flex;
-  justify-content: space-between;
   flex-flow: row nowrap;
-  padding: 19px;
+  justify-content: flex-start;
+  padding: 10px 19px;
   margin-bottom: 1px;
   font-size: 14px;
   background-color: @primary-green-100;
